# CustomerSupportAgent-A-Decision-Record

./: .gitignore  README.md  pyproject.toml
artifacts/: sample-audit-report.md
decisions/: 0001-balanced-scorecard.md  0002-bounded-autonomy.md  0003-cost-routing.md  0004-escalation-context.md  0005-evaluation-gate.md  0006-governance-audit.md  0007-build-vs-buy.md
docs/: architecture.md
evals/: README.md  __init__.py  golden_cases.json  golden_runner.py  safety_invariants.py
src/: README.md  __init__.py  actions.py  router.py  verdict_gate.py
tests/: test_golden.py  test_router.py  test_safety_invariants.py  test_verdict_gate.py
