[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "support-agent-decisions"
version = "0.1.0"
description = "Reference slice: verdict gate, cost router, and eval harness for a customer-support agent."
requires-python = ">=3.10"
dependencies = []          # the reference slice is pure standard library

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["src", "evals"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
